Implement lookup of time/crop-specific diff values

--- a/config.json
+++ b/config.json
@@ -116,16 +116,10 @@
         {
             "title": "Vegetationsindex-Differenzen",
             "abstract": "Abweichung vom langjährigen Mittel für verschiedene Anbaufrüchte",
-            "layers": [
-                {
-                    "include": "ows_refactored.s2_vi.layers.ndvi_diff",
-                    "type": "python"
-                },
-                {
-                    "include": "ows_refactored.s2_vi.layers.evi_diff",
-                    "type": "python"
-                }
-            ]
+            "layers": {
+                "include": "ows_refactored.s2_vi.layers.diff",
+                "type": "python"
+            }
         }
     ]
 }
