Make WCS output apply styles' index_function (hacky)

--- a/config.json
+++ b/config.json
@@ -69,7 +69,7 @@
         "formats": {
             "GeoTIFF": {
                 "renderers": {
-                    "1": "datacube_ows.wcs1_utils.get_tiff",
+                    "1": "ows_refactored.s2_vi.wcs.as_tiff_wcs1",
                     "2": "datacube_ows.wcs2_utils.get_tiff"
                 },
                 "mime": "image/geotiff",
