--- a/config.json
+++ b/config.json
@@ -128,6 +128,20 @@
                 "include": "ows_refactored.s2_vi.layers.diff_norm",
                 "type": "python"
             }
+        },
+        {
+            "title": "Vegetationsparameter",
+            "abstract": "Zum Beispiel LAI und Biomasse, modelliert aus Aufnahmen von Sentinel-2A/B",
+            "layers": [
+                {
+                    "include": "ows_refactored.s2_vi.layers.lai",
+                    "type": "python"
+                },
+                {
+                    "include": "ows_refactored.s2_vi.layers.bm",
+                    "type": "python"
+                }
+            ]
         }
     ]
 }
